@@ -10,6 +10,7 @@ cc_sources = misc.cc \
 	     gentoo_email_address.cc \
 	     developer.cc \
 	     herd.cc \
+		 project_xml.cc \
 	     herds_xml.cc \
 	     metadata.cc \
 	     metadata_xml.cc \
@@ -25,6 +26,7 @@ hh_sources = exceptions.hh \
 	     developer.hh \
 	     herd.hh \
 	     xmlbase.hh \
+		 project_xml.hh \
 	     herds_xml.hh \
 	     metadata.hh \
 	     metadata_xml.hh \
